# Asimov_Agno_AI_Customer_Service

./: .env.example  Dockerfile  README.md  app.py  bot_instance.py  compose.yml  logger_config.py  main.py  pyproject.toml
data/: asimov.md  prompt.xml
routers/: telegram_router.py  telegram_router_v2.py
scripts/: start_server.sh  start_worker.sh
services/: telegram_bot.py
workers/: tasks.py
